fixed bug; detailed menu was out of place previously

--- a/trunk/assets/css/style.css
+++ b/trunk/assets/css/style.css
@@ -373,6 +373,7 @@ body {
 
 #rightboxlvl22 {
     display: none;
+    height: 454px;
 }
 /* DETAILEDPLACE DETAILEDPLACE DETAILEDPLACE DETAILEDPLACE DETAILEDPLACE DETAILEDPLACE */
 #detailedplace {
@@ -401,7 +402,8 @@ body {
 .courtinfo {
 }
 #reviews {
-	height: 432px;
+	display: none;
+        height: 432px;
 	width: 502px;
 	float: right;
 	margin-top: 2px;
@@ -411,7 +413,8 @@ body {
 	padding: 4px;
 }
 #images {
-	height: 432px;
+	display: none;
+        height: 432px;
 	width: 502px;
 	float: right;
 	margin-top: 2px;
